@@ -62,3 +62,4 @@
 25-Feb-2021 V0.70 Update with split out rcsb.utils.dictionary
 18-Mar-2021 V0.71 Adjustments in initialization  UniProtExtractor()
 13-May-2021 V0.72 Add minSeqLen argument to exportProteinEntityFasta()
+24-May-2021 V0.73 Add BranchedEntityExtractor() and associated tests
